Refactor tests to use state reassignment for game updates and improve consistency in state object handling across `ClientGameControllerTest`, `PlayerLogicTest`, and `GhostLogicTest`; enhance safety checks for mutable state changes.